package edu.fiuba.algo3.modelo;

public interface Construible {
    int turnosParaConstruir();
}
